@@ -1,5 +1,12 @@
 2006-10-18  Arno Rehn  <arno@arnorehn.de>
 
+	* Implemented a very ugly hack to construct a QMainWindow in C++ and set
+	  the resulting smokeqyoto_object to the C#-instance. This fixes the
+	  QDockWidgets not being movable.
+	  Needs improvement!
+
+2006-10-18  Arno Rehn  <arno@arnorehn.de>
+
 	* Added a methodCache, so if a methodId has already been looked up it can
 	  be retrieved from the methodCache.
 
